# mh-flight-logs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.dev.yml  compose.prod.yml  dev.Dockerfile  docker-compose.sh  docker-compose.yml  docker-run-cron.sh  docker-run.sh  pyproject.toml  run-cron.sh  run.sh
asean_flight_logs/: main.py
data/: flights.db  sqlite_debug.py
data/responses/: avstack-2023-09-16.json  flight-2023-09-16-0-100.json  flight-2023-09-16-100-200.json  flight-2023-09-16-200-300.json  flight-2023-09-16-300-400.json  flight-2023-09-16-400-500.json  flight-2023-09-16-500-600.json  flight-2023-09-16-600-700.json  flight-2023-09-16-700-800.json
dockerfiles/: prod.Dockerfile
notebooks/: aviationstack_api.ipynb  jinja.ipynb  mvp.ipynb  mvp_json.ipynb  sqlite.ipynb  twitter_api.ipynb
templates/: agg.sql  create.sql  delayed.sql  delayed_json.sql  insert.sql
tests/: conftest.py  test_api_retry.py  test_responses.py
tests/data/: sample_code0_response.json  sample_error_response.json  sample_flight_response.json  sample_flights_api_response.json  tutorial.db
